Rewrote some stuuf to comply with the new data

--- a/DataCompression.ipynb
+++ b/DataCompression.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-28T19:07:46.838652Z",
-     "start_time": "2025-03-28T19:07:46.812462Z"
+     "end_time": "2025-04-01T08:47:39.914091Z",
+     "start_time": "2025-04-01T08:47:39.892073Z"
     }
    },
    "cell_type": "code",
@@ -35,8 +35,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-03-28T19:07:50.148364Z",
-     "start_time": "2025-03-28T19:07:46.848994Z"
+     "end_time": "2025-04-01T08:47:49.715580Z",
+     "start_time": "2025-04-01T08:47:39.928670Z"
     }
    },
    "source": [
@@ -46,6 +46,9 @@
     "import pandas as pd\n",
     "import time\n",
     "import warnings\n",
+    "from astropy.convolution import convolve_fft\n",
+    "from astropy.convolution import Gaussian1DKernel\n",
+    "import glob\n",
     "warnings.simplefilter(\"ignore\", DeprecationWarning)"
    ],
    "outputs": [],
@@ -55,8 +58,6 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "import glob\n",
-    "\n",
     "wlrange = [4.9, 28.1]\n",
     "species = ['C2H2_H', 'CH4_H', 'CO', 'CO2_H', 'HCN_H', 'NH3_H', 'NO_H', 'OH', 'o-H2', 'o-H2O', 'p-H2', 'p-H2O']\n",
     "ions = ['Ar+', 'Ar++', 'Fe+', 'Ne+', 'Ne++', 'S']\n",
@@ -100,10 +101,45 @@
     "        model_data.append(total_flux_ion)\n",
     "        model_data.append(wl)\n",
     "        \n",
-    "        for flits in ['atomic', 'CO', 'CO2', 'H2O', 'HCN', 'NH3', 'NO', 'O2', 'OH']:\n",
+    "        for flits in ['atomic', 'CH4', 'CO', 'CO2', 'H2O', 'HCN', 'NH3', 'NO', 'O2', 'OH']:\n",
     "            model_flits = pread.read_FLiTs(f'./FLiTs/{flits}/'+model_name, filename=f'specFLiTs1_{flits}.out')\n",
-    "            model_data.append(model_flits.flux-model_flits.flux_cont)\n",
-    "            model_data.append(model_flits.wl)\n",
+    "            wl=model_flits.wl\n",
+    "            flux=model_flits.flux-model_flits.flux_cont\n",
+    "            specR = 3000\n",
+    "            \n",
+    "            # Make a new wl grid\n",
+    "            wl_log=np.logspace(np.log10(np.nanmin(wl)),np.log10(np.nanmax(wl)),num=np.size(wl)*1)\n",
+    "            \n",
+    "            # Find stddev of Gaussian kernel for smoothing\n",
+    "            # taken from here https://github.com/spacetelescope/pysynphot/issues/78\n",
+    "            R_grid=(wl_log[1:-1]+wl_log[0:-2])/(wl_log[1:-1]-wl_log[0:-2])/2\n",
+    "            sigma=np.median(R_grid)/specR\n",
+    "            if sigma<1:\n",
+    "              sigma=1\n",
+    "            \n",
+    "            # Interpolate on logarithmic grid\n",
+    "            f_log=np.interp(wl_log,wl,flux)\n",
+    "            # f_cont_log=np.interp(wl_log,wl,flux_cont)\n",
+    "            \n",
+    "            # in the idl script this is interpreted as the FWHM,\n",
+    "            # but the convolution routine wants stddev use relation\n",
+    "            # FWHM=2*sqrt(2ln2)*stddev=2.355/stddev\n",
+    "            # this should than be consistent with the result from the\n",
+    "            # ProDiMo idl script\n",
+    "            gauss=Gaussian1DKernel(stddev=sigma/2.355)\n",
+    "            flux_conv=convolve_fft(f_log,gauss)\n",
+    "            # flux_cont_conv=convolve_fft(f_cont_log,gauss)\n",
+    "            \n",
+    "            # Interpolate back on original wavelength grid\n",
+    "            flux_sm=np.interp(wl,wl_log,flux_conv)\n",
+    "            # flux_cont_sm=np.interp(wl,wl_log,flux_cont_conv)\n",
+    "            \n",
+    "            cut=2*int(sigma)\n",
+    "            flux_smc=flux_sm[cut:(len(flux_sm)-cut)]\n",
+    "            # flux_cont_smc=flux_cont_sm[cut:(len(flux_cont_sm)-cut)]\n",
+    "            wlc=wl[cut:(len(wl)-cut)]\n",
+    "            model_data.append(flux_smc)\n",
+    "            model_data.append(wlc)\n",
     "        \n",
     "        data.append(model_data)\n",
     "        \n",
@@ -114,13 +150,13 @@
     "        i += 1\n"
    ],
    "id": "4eec44a9e380bc7a",
-   "execution_count": 4,
+   "execution_count": 3,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "25/25; 2:36\n"
+      "25/25; 2:37\n"
      ]
     }
    ]
@@ -128,8 +164,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-28T20:19:52.688485Z",
-     "start_time": "2025-03-28T20:19:47.474219Z"
+     "end_time": "2025-04-01T10:06:42.949679Z",
+     "start_time": "2025-04-01T10:06:40.559456Z"
     }
    },
    "cell_type": "code",
@@ -140,7 +176,8 @@
     "                           'ProDiMo CH4_H', 'ProDiMo CO', 'ProDiMo CO2_H', 'ProDiMo HCN_H', 'ProDiMo NH3_H',\n",
     "                           'ProDiMo NO_H', 'ProDiMo OH', 'ProDiMo o-H2', 'ProDiMo o-H2O', 'ProDiMo p-H2',\n",
     "                           'ProDiMo p-H2O', 'ProDiMo atomic', 'ProDiMo Wavelength', 'FLiTs atomic Flux',\n",
-    "                           'FLiTs atomic Wavelength', 'FLiTs CO Flux', 'FLiTs CO Wavelength', 'FLiTs CO2 Flux',\n",
+    "                           'FLiTs atomic Wavelength', 'FLiTs CH4 Flux', 'FLiTs CH4 Wavelength', 'FLiTs CO Flux',\n",
+    "                           'FLiTs CO Wavelength', 'FLiTs CO2 Flux',\n",
     "                           'FLiTs CO2 Wavelength', 'FLiTs H2O Flux', 'FLiTs H2O Wavelength', 'FLiTs HCN Flux',\n",
     "                           'FLiTs HCN Wavelength', 'FLiTs NH3 Flux', 'FLiTs NH3 Wavelength', 'FLiTs NO Flux',\n",
     "                           'FLiTs NO Wavelength', 'FLiTs O2 Flux', 'FLiTs O2 Wavelength', 'FLiTs OH Flux',\n",
