--- a/DataCompression.ipynb
+++ b/DataCompression.ipynb
@@ -47,6 +47,7 @@
     "import time\n",
     "import warnings\n",
     "import glob\n",
+    "from spectres import spectres\n",
     "warnings.simplefilter(\"ignore\", DeprecationWarning)"
    ],
    "outputs": [],
@@ -137,6 +138,35 @@
    "id": "c7eace80acac589f",
    "outputs": [],
    "execution_count": 9
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "species = ['CH4', 'CO', 'CO2', 'H2O', 'HCN', 'NO', 'O2', 'OH']\n",
+    "c2h2_flux = []\n",
+    "c2h2_wl = []\n",
+    "print(df.columns)\n",
+    "for i, row in df.iterrows():\n",
+    "    n_row, n_col = divmod(i, 5)\n",
+    "    total_FLiTs_flux = df.loc[df['Model Name'] == row['Model Name'], 'FLiTs Flux'].values[0].copy()\n",
+    "    C2H2_flux = total_FLiTs_flux.copy()\n",
+    "    total_FLiTs_wl = df.loc[df['Model Name'] == row['Model Name'], 'FLiTs Wavelength'].values[0].copy()\n",
+    "    mask = ((total_FLiTs_wl >= 6.8) & (total_FLiTs_wl <= 8.2)) | \\\n",
+    "       ((total_FLiTs_wl >= 11.1) & (total_FLiTs_wl <= 17.6))\n",
+    "    for specie in species:\n",
+    "        interp_flux = spectres(total_FLiTs_wl, row[f'FLiTs {specie} Wavelength'], row[f'FLiTs {specie} Flux'], fill=0, verbose=False)\n",
+    "    C2H2_flux = np.where(mask, C2H2_flux, 0)\n",
+    "    c2h2_flux.append(C2H2_flux)\n",
+    "    c2h2_wl.append(total_FLiTs_wl)\n",
+    "df['FLiTs C2H2 Wavelength'] = c2h2_wl\n",
+    "df['FLiTs C2H2 Flux'] = c2h2_flux\n",
+    "with open(f'FLiTsData{gdr}.pkl', 'wb') as f:\n",
+    "    pickle.dump(df, f)"
+   ],
+   "id": "1e70beeaaff5c9b4"
   },
   {
    "metadata": {
