--- a/DataAnalysis.ipynb
+++ b/DataAnalysis.ipynb
@@ -1288,7 +1288,7 @@
     "    #              fontsize=10, color='red',\n",
     "    #              weight='bold')\n",
     "    axes[i].set_xlim(xrange)\n",
-    "    # axes[i].set_ylim(yrange)\n",
+    "    axes[i].set_ylim(yrange)\n",
     "    if n_row == 4:\n",
     "        axes[i].set_xlabel(r\"Wavelength ($\\mu$m)\")  # Bottom row\n",
     "        axes[i].set_xticks(np.linspace(xrange[0], xrange[1], num_xticks, dtype=int)[:-1])\n",
