--- a/DataCompression.ipynb
+++ b/DataCompression.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-08T17:06:56.852310Z",
-     "start_time": "2025-04-08T17:06:56.842783Z"
+     "end_time": "2025-04-17T12:31:00.755689Z",
+     "start_time": "2025-04-17T12:31:00.749907Z"
     }
    },
    "cell_type": "code",
@@ -35,8 +35,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-04-08T17:06:58.507658Z",
-     "start_time": "2025-04-08T17:06:56.878408Z"
+     "end_time": "2025-04-17T12:31:05.964586Z",
+     "start_time": "2025-04-17T12:31:04.850431Z"
     }
    },
    "source": [
@@ -57,8 +57,8 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "gdr = '1000_N'\n",
-    "species = ['atomic', 'C2H2', 'CH4', 'CO', 'CO2', 'H2O', 'HCN', 'NH3', 'NO', 'O2', 'OH']\n",
+    "gdr = '100'\n",
+    "species = ['atomic', 'CH4', 'CO', 'CO2', 'H2O', 'HCN', 'NH3', 'NO', 'O2', 'OH']\n",
     "values = np.arange(-0.5, 0.51, 0.25)\n",
     "data = []\n",
     "start_time = time.time()\n",
@@ -86,6 +86,7 @@
     "        flux -= flux_cont\n",
     "        model_data.append(wl)\n",
     "        model_data.append(flux)\n",
+    "        model_data.append(flux_cont)\n",
     "        \n",
     "        for specie in species:\n",
     "            specie_flits = pread.read_FLiTs(f'gdr_{gdr}/{model_name}', filename=f'specFLiTs1_{specie}.out')\n",
@@ -102,7 +103,7 @@
     "        i += 1\n"
    ],
    "id": "4eec44a9e380bc7a",
-   "execution_count": 5,
+   "execution_count": 9,
    "outputs": [
     {
      "name": "stdout",
@@ -116,15 +117,15 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-08T17:11:59.834821Z",
-     "start_time": "2025-04-08T17:11:59.114672Z"
+     "end_time": "2025-04-17T12:41:04.729170Z",
+     "start_time": "2025-04-17T12:41:03.995369Z"
     }
    },
    "cell_type": "code",
    "source": [
     "df = pd.DataFrame(data,\n",
-    "                  columns=['Model Name', 'C Value', 'O Value', 'CO Value', 'FLiTs Wavelength', 'FLiTs Flux',\n",
-    "                           'FLiTs atomic Flux', 'FLiTs atomic Wavelength', 'FLiTs C2H2 Flux', 'FLiTs C2H2 Wavelength', 'FLiTs CH4 Flux', 'FLiTs CH4 Wavelength',\n",
+    "                  columns=['Model Name', 'C Value', 'O Value', 'CO Value', 'FLiTs Wavelength', 'FLiTs Flux', 'FLiTs Flux Continuum',\n",
+    "                           'FLiTs atomic Flux', 'FLiTs atomic Wavelength', 'FLiTs CH4 Flux', 'FLiTs CH4 Wavelength',\n",
     "                           'FLiTs CO Flux',\n",
     "                           'FLiTs CO Wavelength', 'FLiTs CO2 Flux', 'FLiTs CO2 Wavelength', 'FLiTs H2O Flux',\n",
     "                           'FLiTs H2O Wavelength', 'FLiTs HCN Flux',\n",
@@ -137,7 +138,7 @@
    ],
    "id": "c7eace80acac589f",
    "outputs": [],
-   "execution_count": 6
+   "execution_count": 10
   },
   {
    "metadata": {},
