Updates from Overleaf

--- a/Latex/Strw-bsc-minimal.tex
+++ b/Latex/Strw-bsc-minimal.tex
@@ -24,7 +24,7 @@
 %\major{Physics and Mathematics}
 
 % optional cover picture - should be jpg or pdf
-% \coverpicture{\includegraphics[width=13cm]{Latex/lion-msc-logo.pdf}}
+% \coverpicture{\includegraphics[width=10cm]{Latex/lion-msc-logo.pdf}}
 
 % Use this to make hyperlinks visible in the document.
 % \hypersetup{colorlinks=true}
@@ -69,7 +69,7 @@ In chapter \ref{Ch: Theoretical Background} we give background information about
 
 
 
-\chapter{Theoretical Background}\label{Ch: Theoretical Background}
+% \chapter{Theoretical Background}\label{Ch: Theoretical Background}
 \section{Formation and evolution of Disks}
 Molecular clouds are large collections of gas and dust. When these clouds are perturbed, parts of the cloud can become dense enough, making them collapse under their gravity. This will result in the creation of a star surrounded by gas and dust. The angular momentum of each of the particles is randomly oriented, but on average the angular momentum vector is pointed in a certain direction. Two particles colliding will cause them to exchange angular momentum. If many collisions happen, all the angular momenta of the other than the average angular momentum vector get canceled out. This results in the formation of a disk around the pre-main-sequence star.
 The evolution of the disk can be categorized into 4 classes \cite{1987ApJ...312..788A}. Class 0 are objects where an optically thick envelope surrounds the protostar. Class I objects have a star and disk but are still embedded in an optically thick envelope. The star and disk become visible in class II objects as the star has become bright enough to blow away the envelope. In class III objects, the disk has largely been depleted of gas and dust, leaving behind planets and planetesimals. 
@@ -100,11 +100,9 @@ For our research, we ran a model grid with 25 models with ProDiMo and used FLiTs
 \textbf{INSERT TABLE OF PARAMETERS}
 \section{Analysis}
 This part is still unknown as I just received the parts of the data and the project is still really open-ended 
-
-% \section{Analysis}
-% \chapter{Results}
-% \chapter{Discussion}
-% \chapter{Conclusion}
+\chapter{Results}
+\chapter{Discussion}
+\chapter{Conclusion}
 \bibliographystyle{lion-msc}
 \bibliography{references}
 
